<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/didact_gothic"
                    android:text="@string/app_name"
                    android:textSize="@dimen/textSize_name_logo"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/logo"/>
            </LinearLayout>

        </RelativeLayout>

        //LinearLayout para agrupar los TextInput y el botón
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/marginTop"
            android:isScrollContainer="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            //Primer TextInput para el usuario
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />

            </android.support.design.widget.TextInputLayout>

            //Segundo TextInput para la constraseña
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/marginTop"
            android:gravity="center">
            <Button
                android:id="@+id/login_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:theme="@style/RaisedButtonDark"
                android:text="@string/login" />
        </LinearLayout>

            //Linear Layout para agrupar los dos textView de Crear Cuenta
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="35dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/didact_gothic"
                    android:text="@string/createAccount_01"
                    android:textSize="@dimen/create_account_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/didact_gothic"
                    android:textSize="@dimen/create_account_size"
                    android:paddingStart="5dp"
                    android:text="@string/createAccount_02"
                    android:onClick="signUp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>