<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/albumCard"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_height="@dimen/height_cardView"
    android:backgroundTint="@color/background">
...
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp">

        //PORTADA DEL ÁLBUM
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:scaleType="centerCrop"/>

...
